added heading to appear on hover. Added checkboxes to give options of hover

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2633,6 +2633,9 @@
             "image": {
               "label": "Image"
             },
+            "enable_image_hover": {
+              "label": "Enable image hover"
+            },
             "image_2": {
               "label": "Hover image"
             },
@@ -2641,6 +2644,9 @@
             },
             "title": {
               "label": "Heading"
+            },
+            "heading_on_hover": {
+              "label": "Show heading on hover"
             },
             "text": {
               "label": "Description"
